Inoreader added the tag button to the article column view toolbar, which caused the mark as read button to be inadvertently hidden by this script; showed mark as read button again. Put tag button after mark as read button, since it's less commonly used. Fixed toolbar not extending all the way to the right and showing article content underneath it when scrolled. Fixed border on top page toolbar not extending all the way to the left. Disabled large flexbox fix for column view buttons because Inoreader rewrote a lot of that DOM.

--- a/styles/inoreader.user.css
+++ b/styles/inoreader.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Inoreader
 @namespace      https://aldaviva.com/userstyles/
-@version        0.1.12
+@version        0.1.13
 @description    Removed clutter. Made videos muted, loop, and autoplay. Made certain thumbnails appear only on hover. Removed dead zone between articles in Column View.
 @author         Ben Hutchison <ben@aldaviva.com> (https://aldaviva.com)
 @license        MIT
@@ -62,6 +62,7 @@
     /* Make the article top toolbar underline extend to the full, variable width */
     .article_footer {
         max-width: none;
+        margin-right: 0 !important;
     }
 
     /* Videos might be too wide for article width, so limit them to 100% to avoid need to scroll to see full width of videos
@@ -97,18 +98,22 @@
     /* Search and subscribe box in top left corner */
     #sb_tp_search_overlay {
         margin-left: 14px;
+        background: none;
     }
     
     #sb_reading_part {
         width: auto !important;
+        box-shadow: none;
     }
     
     #sb_tree_part {
         width: auto !important;
+        background: none;
     }
     
     #subscriptions_buttons {
         justify-content: space-between;
+        box-shadow: inset 0 -1px 0 #333333; /* moved from #sb_reading_part so it extends full width */
     }
 
     /* Get rid of unclickable margins between articles in Column View */
@@ -177,13 +182,25 @@
         justify-content: flex-start;
     }
     
-    .article_footer_main_buttons > div:not(:first-child) {
-        margin-left: 24px;
+    .article_footer_buttons.icon-article_topbar_mobilize_empty,
+    .article_footer_buttons.icon-article_topbar_mobilize_full,
+    .article_footer_buttons.icon-article_topbar_text_to_speech,
+    .article_footer_buttons.icon-article_topbar_more_menu {
+        display: none;
     }
     
-    .article_footer_main_buttons > div:nth-child(2)~div,
-    .article_footer_main_buttons .icon-button-mobilize-empty {
-        display: none;
+    .article_footer_buttons.icon-article_topbar_read_later_empty,
+    .article_footer_buttons.icon-article_topbar_read_later_full {
+        order: 1;
+    }
+    
+    .article_footer_buttons.icon-article_topbar_mark_as_read_empty,
+    .article_footer_buttons.icon-article_topbar_mark_as_read_full {
+        order: 2;
+    }
+
+    .article_footer_buttons.icon-all-tags {
+        order: 3;
     }
     
     /* Hide the ellipsis menu in each article card in Card View */
@@ -362,7 +379,7 @@
     }
     
     /* Fix column view info row (unread, starred, feed title, and date) flexbox madness */
-    .column_view_info {
+    /*.column_view_info {
         align-items: stretch;
         margin-left: 5px;
     }
@@ -397,7 +414,7 @@
     .column_view_info .header_date {
         line-height: normal;
         display: block;
-    }
+    }*/
     
     /* Hide the distracting extra buttons (mark section as read and see all articles) under the "no more unread articles here" message */
     #no_more_div button {
